--- a/monad-challenges-code.cabal
+++ b/monad-challenges-code.cabal
@@ -24,17 +24,12 @@ Tested-With:
 library
   exposed-modules:     MCPrelude
   other-extensions:    Trustworthy, CPP, NoImplicitPrelude, BangPatterns
-  build-depends:       base >= 4 && < 5
+  build-depends:       base >= 4 && < 5, split
   hs-source-dirs:      src
   default-language:    Haskell2010
 
-executable site
-  hs-source-dirs: hakyll
-  main-is: site.hs
-  build-depends:
-      base
-    , filepath
-    , hakyll
-    , mtl
-    , transformers
+executable set1_0
+  hs-source-dirs: challenge
+  main-is: set1_0.hs
+  build-depends: base, monad-challenges-code
   default-language:    Haskell2010
