--- a/monad-challenges-code.cabal
+++ b/monad-challenges-code.cabal
@@ -11,25 +11,39 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 Tested-With:
-  GHC == 7.6.3,
-  GHC == 7.8.4,
-  GHC == 7.10.3,
-  GHC == 8.0.2,
-  GHC == 8.2.2,
-  GHC == 8.4.4,
-  GHC == 8.6.3,
-  GHC == 8.8.3,
-  GHC == 8.10.1
+    GHC == 7.6.3,
+    GHC == 7.8.4,
+    GHC == 7.10.3,
+    GHC == 8.0.2,
+    GHC == 8.2.2,
+    GHC == 8.4.4,
+    GHC == 8.6.3,
+    GHC == 8.8.3,
+    GHC == 8.10.1
 
-library
-  exposed-modules:     MCPrelude
-  other-extensions:    Trustworthy, CPP, NoImplicitPrelude, BangPatterns
-  build-depends:       base >= 4 && < 5, split
-  hs-source-dirs:      src
-  default-language:    Haskell2010
+library mcprelude
+    exposed-modules:     MCPrelude
+    other-extensions:    Trustworthy, CPP, NoImplicitPrelude, BangPatterns
+    build-depends:       base >= 4 && < 5, split
+    hs-source-dirs:      src
+    default-language:    Haskell2010
 
-executable set1_0
-  hs-source-dirs: challenge
-  main-is: set1_0.hs
-  build-depends: base, monad-challenges-code
-  default-language:    Haskell2010
+library challenges
+    exposed-modules:     Challenge
+    other-extensions:    MonadComprehensions, RebindableSyntax
+    build-depends:       base >= 4 && < 5, mcprelude
+    hs-source-dirs:      challenges
+    default-language:    Haskell2010
+
+executable main
+    hs-source-dirs: exe
+    main-is: Main.hs
+    build-depends: base, mcprelude, challenges
+    default-language:    Haskell2010
+
+test-suite test-foo
+    type:             exitcode-stdio-1.0
+    hs-source-dirs:   tests
+    main-is:          ChallengeSpec.hs
+    build-depends:    base, challenges, hspec
+    default-language: Haskell2010
