--- a/monad-challenges-code.cabal
+++ b/monad-challenges-code.cabal
@@ -45,5 +45,9 @@ test-suite test-foo
     type:             exitcode-stdio-1.0
     hs-source-dirs:   tests
     main-is:          ChallengeSpec.hs
-    build-depends:    base, challenges, hspec
+    build-depends:    base,
+                      challenges,
+                      hspec,
+                      SHA,
+                      utf8-string
     default-language: Haskell2010
