challenge 1.3 more generators

--- a/monad-challenges-code.cabal
+++ b/monad-challenges-code.cabal
@@ -49,5 +49,7 @@ test-suite test-foo
                       challenges,
                       hspec,
                       SHA,
-                      utf8-string
+                      utf8-string,
+                      mcprelude
+
     default-language: Haskell2010
