--- a/monad-challenges-code.cabal
+++ b/monad-challenges-code.cabal
@@ -29,8 +29,8 @@ library mcprelude
     default-language:    Haskell2010
 
 library challenges
-    exposed-modules:     Challenge
-    other-extensions:    MonadComprehensions, RebindableSyntax
+    exposed-modules:     State, Maybe
+    other-extensions:    NoImplicitPrelude, MonadComprehensions, RebindableSyntax
     build-depends:       base >= 4 && < 5, mcprelude
     hs-source-dirs:      challenges
     default-language:    Haskell2010
