--- a/monad-challenges-code.cabal
+++ b/monad-challenges-code.cabal
@@ -29,7 +29,7 @@ library mcprelude
     default-language:    Haskell2010
 
 library challenges
-    exposed-modules:     State, Maybe, List
+    exposed-modules:     State, Maybe, List, Common
     other-extensions:    NoImplicitPrelude, MonadComprehensions, RebindableSyntax
     build-depends:       base >= 4 && < 5, mcprelude
     hs-source-dirs:      challenges
